--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta property="og:title" content="Maho Tech Solutions | Bespoke Web Development / Consulting">
+    <meta property="og:description" content="Create a custom web application with Maho Tech Solutions.">
+    <meta property="og:image" content="https://mahotechsolutions.com.au">
+    <meta property="og:url" content="https://mahotechsolutions.com.au``">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Maho Tech Solutions | Custom Website Development">
+    <meta name="twitter:description" content="Create a custom website with Maho Tech Solutions.">
+    <meta name="twitter:image" content="https://mahotechsolutions.com.au">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
