added robots and sitemap

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Maho Tech Solutions | Bespoke Web Development / Consulting">
+    <meta property="description" content="Tailored software solutions from data pipelines to web and mobile application developemnt.">
     <meta property="og:description" content="Create a custom web application with Maho Tech Solutions.">
     <meta property="og:image" content="https://mahotechsolutions.com.au">
     <meta property="og:url" content="https://mahotechsolutions.com.au``">
