added robots and sitemap

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="title" content="Maho Tech Solutions | Bespoke Web Development / Consulting">
     <meta property="og:title" content="Maho Tech Solutions | Bespoke Web Development / Consulting">
     <meta property="description" content="Tailored software solutions from data pipelines to web and mobile application developemnt.">
     <meta property="og:description" content="Create a custom web application with Maho Tech Solutions.">
@@ -12,6 +13,7 @@
     <meta property="og:url" content="https://mahotechsolutions.com.au``">
 
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Maho Tech Solutions | Custom Website Development">
     <meta name="twitter:title" content="Maho Tech Solutions | Custom Website Development">
     <meta name="twitter:description" content="Create a custom website with Maho Tech Solutions.">
     <meta name="twitter:image" content="https://mahotechsolutions.com.au">
